SVC-14 #comment Registration Page layout and style done. TODO: API integration

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_API_URL=//jsonplaceholder.typicode.com
+REACT_APP_API_URL=//mysquidpay.com/
+REACT_APP_CLIENT_ID="spa-client"
+REACT_APP_CLIENT_SECRET="6zhfdF]dHmZr\Tu"
