SVC-13 #comment Login API integration, added encryption/decryption helper, created component for Dialog messages, watch for the unauthorized message

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_API_URL=//mysquidpay.com/
+PUBLIC_URL=/spv3plusfe
+REACT_APP_API_URL=//mysquidpay.com/spv3plusbe/public
 REACT_APP_CLIENT_ID="spa-client"
-REACT_APP_CLIENT_SECRET="6zhfdF]dHmZr\Tu"
+REACT_APP_CLIENT_SECRET="secret"
