--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 BROWSER=none
 EXTEND_ESLINT=true
 FAST_REFRESH=true
-REACT_APP_API_URL=//mysquidpay.com/
+REACT_APP_API_URL=//mysquidpay.com/spv3plusbe/public
 REACT_APP_CLIENT_ID="spa-client"
-REACT_APP_CLIENT_SECRET="6zhfdF]dHmZr\Tu"
+REACT_APP_CLIENT_SECRET="secret"
