--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/webpack-env": "1.15.2",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
+    "crypto-js": "4.0.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
@@ -49,6 +50,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
     "react-test-renderer": "16.13.1",
+    "react-transition-group": "4.4.1",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
@@ -65,7 +67,7 @@
     "web-vitals": "0.2.4"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=~/Desktop/cert/local.cert SSL_KEY_FILE=~/Desktop/cert/local.key react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
