--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "prettier": "2.1.1",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
+    "react-code-input": "3.10.1",
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.6",
     "react-i18next": "11.7.2",
-    "react-pin-input": "1.0.1",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
