--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/testing-library__jest-dom": "5.9.2",
     "@types/webpack": "4.41.22",
     "@types/webpack-env": "1.15.2",
+    "bootstrap": "4.6.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "crypto-js": "4.0.0",
@@ -44,6 +45,7 @@
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
     "react-code-input": "3.10.1",
+    "react-bootstrap": "1.5.2",
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.6",
     "react-i18next": "11.7.2",
