--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 GENERATE_SOURCEMAP=false
 PUBLIC_URL=/spv3plusfe
-REACT_APP_API_URL=//mysquidpay.com/spv3plusbe/public
+REACT_APP_API_URL=//mysquidpay.com/spv3plusbe/public/api
 REACT_APP_CLIENT_ID="spa-client"
 REACT_APP_CLIENT_SECRET="secret"
