--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/testing-library__jest-dom": "5.9.2",
     "@types/webpack": "4.41.22",
     "@types/webpack-env": "1.15.2",
-    "bootstrap": "4.6.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "crypto-js": "4.0.0",
@@ -46,7 +45,7 @@
     "prettier": "2.1.1",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
-    "react-bootstrap": "1.5.2",
+    "react-awesome-slider": "4.1.0",
     "react-code-input": "3.10.1",
     "react-custom-scrollbars": "4.2.1",
     "react-dom": "16.13.1",
@@ -55,6 +54,7 @@
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "0.28.1",
     "react-test-renderer": "16.13.1",
     "react-transition-group": "4.4.1",
     "redux-injectors": "1.3.0",
