--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
+    "firebase": "8.6.2",
     "fontfaceobserver": "2.1.0",
     "husky": "4.2.5",
     "i18next": "19.7.0",
