SVC-217 #comment Revert api url and local environment server settings

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 BROWSER=none
 EXTEND_ESLINT=true
 FAST_REFRESH=true
-REACT_APP_API_URL=//devsite-api.squidph.com/api
+REACT_APP_API_URL=//mysquidpay.com/spv3plusbe/public/api
 REACT_APP_CLIENT_ID="spa-client"
 REACT_APP_CLIENT_SECRET="secret"
 REACT_APP_IDLE_TIME=1080000000
