--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "web-vitals": "0.2.4"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=~/Desktop/cert/local.cert SSL_KEY_FILE=~/Desktop/cert/local.key react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
