--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_API_URL=//devsite-api.squidph.com/api
+REACT_APP_API_URL=//mysquidpay.com/spv3plusbe/public/api
 REACT_APP_CLIENT_ID="spa-client"
 REACT_APP_CLIENT_SECRET="secret"
 REACT_APP_IDLE_TIME=3000000
