--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "0.28.1",
     "react-test-renderer": "16.13.1",
+    "react-text-mask": "5.4.3",
     "react-transition-group": "4.4.1",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
@@ -70,6 +71,7 @@
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
+    "text-mask-addons": "3.8.0",
     "ts-node": "9.0.0",
     "typescript": "4.1.3",
     "web-vitals": "0.2.4"
