--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,5 @@ REACT_APP_API_URL=//devsite-api.squidph.com/api
 REACT_APP_CLIENT_ID="spa-client"
 REACT_APP_CLIENT_SECRET="secret"
 REACT_APP_IDLE_TIME=300000
+REACT_APP_SENTRY_DSN=https://675377481dcb4cb7a25b5e9277572e52@o879940.ingest.sentry.io/5836514
+REACT_APP_SENTRY_ENV=staging
