--- a/.env.local
+++ b/.env.local
@@ -2,8 +2,9 @@ BROWSER=none
 EXTEND_ESLINT=true
 FAST_REFRESH=true
 REACT_APP_API_URL=//devsite-api.squidph.com/api
-REACT_APP_CLIENT_ID="spa-client"
-REACT_APP_CLIENT_SECRET="secret"
+REACT_APP_APP_ID="spa-client"
+REACT_APP_APP_SP="secret"
 REACT_APP_IDLE_TIME=300000
 REACT_APP_SENTRY_DSN=https://675377481dcb4cb7a25b5e9277572e52@o879940.ingest.sentry.io/5836514
 REACT_APP_SENTRY_ENV=staging
+REACT_APP_VERSION=1.0.1
