--- a/public/.htaccess
+++ b/public/.htaccess
@@ -13,6 +13,5 @@
   Header set X-XSS-Protection "1; mode=block"
   Header always append X-Frame-Options SAMEORIGIN
   Header set X-Content-Type-Options nosniff
+  Header set Cache-Control "max-age=2592000, immutable"
 </IfModule>
-
-Options -Indexes
