Firebase Analytics Integration

--- a/.env.local
+++ b/.env.local
@@ -5,6 +5,7 @@ REACT_APP_API_URL=//devsite-api.squidph.com/api
 REACT_APP_CLIENT_ID="spa-client"
 REACT_APP_CLIENT_SECRET="secret"
 REACT_APP_IDLE_TIME=300000
-REACT_APP_SENTRY_DSN=https://675377481dcb4cb7a25b5e9277572e52@o879940.ingest.sentry.io/5836514
-REACT_APP_SENTRY_ENV=staging
+REACT_APP_SENTRY_DSN=https://b96b14547335401caccddd72a085eceb@o879940.ingest.sentry.io/5836513
+REACT_APP_SENTRY_ENV=development
+REACT_APP_FIREBASE='{"apiKey":"AIzaSyClPmzu9EYVCcrP9gX-5Ydb4YdFIgAiVv8","projectId":"squidpay-develop","appId":"1:87753987041:web:a149dbfc7f6a40e82fb8a0","measurementId":"G-P7NPG9SCFK"}'
 REACT_APP_VERSION=1.0.1
