--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/react-fontawesome": "0.1.14",
     "@material-ui/core": "4.11.3",
     "@reduxjs/toolkit": "1.4.0",
+    "@sentry/react": "6.9.0",
+    "@sentry/tracing": "6.9.0",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.0.2",
     "@types/fontfaceobserver": "0.0.6",
