--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,5 @@ REACT_APP_SENTRY_DSN=https://b96b14547335401caccddd72a085eceb@o879940.ingest.sen
 REACT_APP_SENTRY_ENV=development
 REACT_APP_FIREBASE='{"apiKey":"AIzaSyClPmzu9EYVCcrP9gX-5Ydb4YdFIgAiVv8","projectId":"squidpay-develop","appId":"1:87753987041:web:a149dbfc7f6a40e82fb8a0","measurementId":"G-P7NPG9SCFK"}'
 REACT_APP_VERSION=1.0.2
+HTTPS=TRUE
+PORT=3002
