--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spv3-vanilla",
-  "version": "3+",
+  "version": "3",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.34",
