--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "node generate-build.js && react-scripts build",
-    "test": "react-scripts test",
+    "test": "CI=true react-scripts test",
     "eject": "react-scripts eject",
     "test:generators": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/testing/generators/test-generators.ts",
     "start:prod": "yarn run build && serve -s build",
