--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ package-lock.json
 .env.development.local
 .env.test.local
 .env.production.local
+.env.release
+.env.staging
 
 # boilerplate internals
 generated-cra-app
