--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-i18next": "11.7.2",
     "react-iframe-comm": "1.2.2",
     "react-lottie-player": "1.4.0",
+    "react-otp-input": "2.4.0",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
