--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "i18next-scanner": "2.11.0",
     "inquirer": "7.3.3",
     "inquirer-directory": "2.2.0",
+    "jest-canvas-mock": "2.3.1",
     "jest-styled-components": "7.0.3",
     "lint-staged": "10.3.0",
     "luxon": "1.26.0",
@@ -83,7 +84,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "node generate-build.js && react-scripts build",
-    "test": "CI=true react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:generators": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/testing/generators/test-generators.ts",
     "start:prod": "yarn run build && serve -s build",
