Add unit test - WIP

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "web-vitals": "0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "node generate-build.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -135,7 +135,9 @@
       "!src/**/*/Loadable.{js,jsx,ts,tsx}",
       "!src/**/*/messages.ts",
       "!src/**/*/types.ts",
-      "!src/index.tsx"
+      "!src/index.tsx",
+      "!src/**/*/firebase.ts",
+      "!src/**/*/FlagsProvider.tsx"
     ],
     "coverageThreshold": {
       "global": {
@@ -146,5 +148,7 @@
       }
     }
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest-canvas-mock": "2.3.1"
+  }
 }
