--- a/.env.local
+++ b/.env.local
@@ -10,3 +10,4 @@ REACT_APP_SENTRY_ENV=development
 REACT_APP_FIREBASE='{"apiKey":"AIzaSyClPmzu9EYVCcrP9gX-5Ydb4YdFIgAiVv8","projectId":"squidpay-develop","appId":"1:87753987041:web:a149dbfc7f6a40e82fb8a0","measurementId":"G-P7NPG9SCFK"}'
 REACT_APP_VERSION=1.3.0
 REACT_APP_BURL="https://testoauth.bpi.com.ph/bpi/api"
+HTTPS=true
