--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 BROWSER=none
 EXTEND_ESLINT=true
 FAST_REFRESH=true
-REACT_APP_API_URL=//devsite-api.squidph.com/api
+REACT_APP_API_URL=//dev-api-my.squid.ph/api
 REACT_APP_SPCID="spa-client"
 REACT_APP_SPCS="secret"
 REACT_APP_IDLE_TIME=300000
